# rust-git-pr-comments-collect

./: Cargo.toml  README.md  stdout_full_example.out
migrations/2020-10-22-040747_create_initial_tables/: down.sql  up.sql
migrations/2020-11-13-060710_alter_git_repository_table/: down.sql  up.sql
resource/: git-pr-comments-collect.sql  stdout_example.out
src/: lib.rs  main.rs  schema.rs
src/db/: connection.rs  entities.rs  mod.rs  models.rs  schema.rs
src/github/: comments.rs  mod.rs  pull_request.rs  repositories.rs
src/lib/: db.rs  entities.rs  mod.rs  models.rs  pull_request.rs  schema.rs
src/rest_client/: base_client.rs  mod.rs
