[package]
name = "rust-git-pr-comments-collect"
version = "0.1.0"
authors = ["Sangchual Cha <sangchual.cha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
serde = "1.0.116"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.59"
futures = "0.3.6"