[package]
name = "rust-git-pr-comments-collect"
version = "0.1.0"
authors = ["Sangchual Cha <sangchual.cha@gmail.com>"]
edition = "2018"

[lib]
name = "git_pr_collect"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
serde = "1.0.116"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.59"
futures = "0.3.6"
postgres = "0.18.0"
chrono = "0.4.19"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
parse_link_header = "0.2.0"